# CW_DB

./: .gitignore  pyproject.toml
cw_db/: config.py  controller.py  model.py  run.py  view.py
cw_db/crud/: create.py  delete.py  read.py  update.py
cw_db/gui/: address_frame.py  courier_frame.py  customer_frame.py  item_frame.py  login_window.py  main_window.py  order_frame.py  schedule_frame.py  user_frame.py
cw_db/gui/dialogs/: dialog.py
