[tool.poetry]
name = "cw-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cw_db"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.16"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
